--- a/css/styles.css
+++ b/css/styles.css
@@ -635,6 +635,19 @@ progress {
   margin-left: auto;
 }
 
+@media (min-width: 320px) {
+  .container-sm, .container {
+    max-width: 540px;
+  }
+  .add-gif {
+    width: 100%;
+    float: none;
+  }
+  .abt-gif {
+    width: 100%;
+    float: none;
+  }
+}
 @media (min-width: 420px) {
   .container-sm, .container {
     max-width: 540px;
